cluster/prod/docker-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: in-cluster-registry
  namespace: efb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: in-cluster-registry
  template:
    metadata:
      labels:
        app: in-cluster-registry
    spec:
      volumes:
        - name: registry-config
          configMap:
            name: registry-config
      containers:
        - image: registry:2
          imagePullPolicy: IfNotPresent
          name: in-cluster-registry
          resources: {}
          volumeMounts:
            - name: registry-config
              mountPath: /etc/docker/registry/config.yml
              subPath: config.yml

---
apiVersion: v1
kind: Service
metadata:
  name: in-cluster-registry-service
  namespace: efb
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: in-cluster-registry
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry.castlecraft.co.in
  namespace: efb
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: registry-basic-auth
  labels:
    name: registry.castlecraft.co.in
spec:
  tls:
    - hosts:
        - registry.castlecraft.co.in
      secretName: wildcard-castlecraft-co-in-tls
  rules:
    - host: registry.castlecraft.co.in
      http:
        paths:
          - backend:
              service:
                name: in-cluster-registry-service
                port:
                  number: 5000
            path: /
            pathType: ImplementationSpecific
